force-app/main/default/objects/Membership_History__c/Membership_History__c.object-meta.xml
<CustomObject>
    <description>This object holds the history of membership and its renewals</description>
    <label>Membership History</label>
    <nameField>
        <displayFormat>MH-{0000}</displayFormat>
        <label>Membership History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Membership Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>