force-app/main/default/objects/Membership_History__c/fields/AccountCurrentMembershipStatus__c.field-meta.xml
<CustomField>
    <fullName>AccountCurrentMembershipStatus__c</fullName>
    <description>The individual&apos;s current status with respect to their membership account</description>
    <label>Account Current Membership Status</label>
    <type>TextArea</type>
</CustomField>