force-app/main/default/objects/Membership_History__c/fields/ApplicationStatus__c.field-meta.xml
<CustomField>
    <fullName>ApplicationStatus__c</fullName>
    <description>This fields indicates the application status of the membership applied</description>
    <label>Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Application Received</fullName>
            </value>
            <value>
                <fullName>Payment Pending</fullName>
            </value>
            <value>
                <fullName>Payment Completed</fullName>
            </value>
            <value>
                <fullName>Membership Activated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>