force-app/main/default/objects/Membership_History__c/fields/Constituent__c.field-meta.xml
<CustomField>
    <fullName>Constituent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constituent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Membership Histories</relationshipLabel>
    <relationshipName>Membership_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>