force-app/main/default/objects/Membership_History__c/fields/EnrollmentType__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentType__c</fullName>
    <description>The type or method of enrollment used by the individual.</description>
    <label>Enrollment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>JOIN</fullName>
            </value>
            <value>
                <fullName>REJOIN</fullName>
            </value>
            <value>
                <fullName>RENEW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>