force-app/main/default/objects/Membership_History__c/fields/ExpiredOn__c.field-meta.xml
<CustomField>
    <fullName>ExpiredOn__c</fullName>
    <description>This field denotes the expiration date of the respective membership</description>
    <label>Expired on</label>
    <type>Date</type>
</CustomField>