force-app/main/default/objects/Membership_History__c/fields/ManualMembership__c.field-meta.xml
<CustomField>
    <fullName>ManualMembership__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to indicate whether it is a manual membership or not</description>
    <label>Manual Membership</label>
    <type>Checkbox</type>
</CustomField>