force-app/main/default/objects/Membership_History__c/fields/Membership_Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Membership_Change_Type__c</fullName>
    <description>Field to note any changes or modifications.</description>
    <label>Membership Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Upgraded</fullName>
            </value>
            <value>
                <fullName>Downgraded</fullName>
            </value>
            <value>
                <fullName>NO Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>