force-app/main/default/objects/Membership_History__c/fields/MembershipDirectory__c.field-meta.xml
<CustomField>
    <fullName>MembershipDirectory__c</fullName>
    <description>Membership directory information</description>
    <label>Membership Directory</label>
    <type>TextArea</type>
</CustomField>