force-app/main/default/objects/Membership_History__c/fields/MembershipLevels__c.field-meta.xml
<CustomField>
    <fullName>MembershipLevels__c</fullName>
    <description>This field stores the level of membership the person holds at that time</description>
    <label>Membership Levels</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>