force-app/main/default/objects/Membership_History__c/fields/OnlineMembership__c.field-meta.xml
<CustomField>
    <fullName>OnlineMembership__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field denotes whether the membership is applied through online form or not</description>
    <label>Online Membership</label>
    <type>Checkbox</type>
</CustomField>