force-app/main/default/objects/Membership_History__c/fields/OriginCategory__c.field-meta.xml
<CustomField>
    <fullName>OriginCategory__c</fullName>
    <description>The initial category or classification when the record was entered into the system.</description>
    <label>Origin Category</label>
    <type>TextArea</type>
</CustomField>