force-app/main/default/objects/Membership_History__c/fields/OriginDetail__c.field-meta.xml
<CustomField>
    <fullName>OriginDetail__c</fullName>
    <description>Detailed picklist field to specify the origin or source details.</description>
    <label>Origin Detail</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Renew</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>