force-app/main/default/objects/Membership_History__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>The origin or means by which the individual’s information or transaction was obtained.</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1996 ALLIED MEMBERS</fullName>
            </value>
            <value>
                <fullName>1996 ALLIED RENEWALS</fullName>
            </value>
            <value>
                <fullName>1996 STANDARD MEMBERS</fullName>
            </value>
            <value>
                <fullName>1996 STANDARD RENEWALS</fullName>
            </value>
            <value>
                <fullName>1999 Natl Town Mtg: San Diego</fullName>
            </value>
            <value>
                <fullName>2001 Main St Conf New</fullName>
            </value>
            <value>
                <fullName>Online Join</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>