force-app/main/default/objects/Membership_History__c/fields/TermDuration__c.field-meta.xml
<CustomField>
    <fullName>TermDuration__c</fullName>
    <description>The numerical length of the membership term.</description>
    <label>Term Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>