force-app/main/default/objects/Membership_History__c/fields/TermFee__c.field-meta.xml
<CustomField>
    <fullName>TermFee__c</fullName>
    <description>The membership fee amount for the specified term.</description>
    <label>Term Fee</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>