force-app/main/default/objects/Membership_History__c/fields/TermPeriod__c.field-meta.xml
<CustomField>
    <fullName>TermPeriod__c</fullName>
    <description>The specific period associated with the membership term, such as monthly or annually.</description>
    <label>Term Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YEAR</fullName>
            </value>
            <value>
                <fullName>MONTH</fullName>
            </value>
            <value>
                <fullName>DAY</fullName>
            </value>
            <value>
                <fullName>LIFE</fullName>
            </value>
            <value>
                <fullName>WEEK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>