force-app/main/default/objects/Membership_History__c/fields/TermStartDate__c.field-meta.xml
<CustomField>
    <fullName>TermStartDate__c</fullName>
    <description>The date on which the membership term begins.</description>
    <label>Term Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>