force-app/main/default/objects/Membership_History__c/fields/TransactionDate__c.field-meta.xml
<CustomField>
    <fullName>TransactionDate__c</fullName>
    <description>The date on which the financial transaction occurred.</description>
    <label>Transaction Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>